Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_B__c.object
<CustomObject>
    <fields>
        <fullName>BABSENTUX__c</fullName>
        <description>If absent how many days were unexcused absences?</description>
        <label>BABSENTUX</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BABSENT__c</fullName>
        <description>During the past 30 days of school, how many days were you absent for any reason</description>
        <label>BABSENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BADHOMECHECK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for BADHOME field</description>
        <label>BADHOMECHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BADHOMSP__c</fullName>
        <description>Total Number of adults specify</description>
        <label>BADHOMSP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAGENT__c</fullName>
        <description>1.       How old was the child when he/she first entered the United States?</description>
        <label>BAGENT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAGUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Age of entry Unknown</description>
        <label>BAGUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAGUS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child born in US</description>
        <label>BAGUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAUNMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.Aunt is service member</description>
        <label>BAUNMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BBROMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Brother is service member</description>
        <label>BBROMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCAMPMO__c</fullName>
        <description>Months in refugee/detention camp</description>
        <label>BCAMPMO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCAMPYR__c</fullName>
        <description>Years in refugee/detention camp</description>
        <label>BCAMPYR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCARESYS__c</fullName>
        <description>Rating of child and caregiving system</description>
        <label>BCARESYS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCETHORG__c</fullName>
        <description>2. Ethnic origin of the child</description>
        <label>BCETHORG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCHHOMECHECK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for BCHHOME field</description>
        <label>BCHHOMECHECK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCHHOMSP__c</fullName>
        <description>Total number of children specify</description>
        <label>BCHHOMSP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCHIENG__c</fullName>
        <description>9. How well does the child speak English?</description>
        <label>BCHIENG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCINANY__c</fullName>
        <description>Child covered by any type of insurance</description>
        <label>BCINANY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BCINCHIP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance CHIP</description>
        <label>BCINCHIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINFFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Fee-For-Service</description>
        <label>BCINFFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance HMO</description>
        <label>BCINHMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Indian Health</description>
        <label>BCINIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINMEDD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Medicaid</description>
        <label>BCINMEDD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINMEDR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Medicare</description>
        <label>BCINMEDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINMHC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance is Military Health</description>
        <label>BCINMHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINOPRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Other Private</description>
        <label>BCINOPRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINOPRS__c</fullName>
        <description>Child&apos;s ins Other Private Specified</description>
        <label>BCINOPRS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCINOPSP__c</fullName>
        <description>Child&apos;s insurance Other Public Specified</description>
        <label>BCINOPSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCINOPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Other Public</description>
        <label>BCINOPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINPBUK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCINPBUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINPPO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance PPO</description>
        <label>BCINPPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINPRIV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Private</description>
        <label>BCINPRIV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINPRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCINPRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCINPUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s insurance Public</description>
        <label>BCINPUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCOUMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Cousin is service member</description>
        <label>BCOUMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCSTASY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s status Asylee</description>
        <label>BCSTASY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCSTIMM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s status Immigrant</description>
        <label>BCSTIMM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCSTNONE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Child&apos;s status None</description>
        <label>BCSTNONE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCSTREF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s status Refugee</description>
        <label>BCSTREF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCSTUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child&apos;s status Unknown</description>
        <label>BCSTUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDADCTY__c</fullName>
        <description>4. If no, in what country was the child&apos;s father born?</description>
        <label>BDADCTY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDADMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Father is service member</description>
        <label>BDADMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDADUS__c</fullName>
        <description>4 Was the child&apos;s father born in the U.S.?</description>
        <label>BDADUS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDETHORG__c</fullName>
        <description>Father&apos;s ethnic origin</description>
        <label>BDETHORG</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDEVATL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attention/Learning is the condition</description>
        <label>BDEVATL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVAUT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Autism is the condition</description>
        <label>BDEVAUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVBLND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Blind or serious difficulty seeing is the condition</description>
        <label>BDEVBLND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVCF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Cystic Fibrosis is the condition</description>
        <label>BDEVCF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVCON__c</fullName>
        <description>4. Developmental condition</description>
        <label>BDEVCON</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDEVCP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Cerebral Palsy is the condition</description>
        <label>BDEVCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVDEF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deaf or serious difficulty hearing is the condition</description>
        <label>BDEVDEF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVDS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Down Syndrome</description>
        <label>BDEVDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVID__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Intellectual disability</description>
        <label>BDEVID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVMD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Muscular Dystrophy</description>
        <label>BDEVMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Other</description>
        <label>BDEVOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVOTSP__c</fullName>
        <description>4. Other specified DV condition</description>
        <label>BDEVOTSP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDEVSB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Spina Bifida</description>
        <label>BDEVSB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVTOUR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Tourette&apos;s and Tic disorders</description>
        <label>BDEVTOUR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDEVUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>4. Unknown is the Developmental condition</description>
        <label>BDEVUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDOV__c</fullName>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDVSRED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Emergency Department is the service</description>
        <label>BDVSRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSRHOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hospital is the service</description>
        <label>BDVSRHOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSROT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Occupational Therapy is the service</description>
        <label>BDVSROT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSRSUR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Surgery is the service</description>
        <label>BDVSRSUR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSRUC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urgent Care is the service</description>
        <label>BDVSRUC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unknown is the service</description>
        <label>BDVSRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVSR__c</fullName>
        <label>BDVSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>null</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDVTRINJ__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Injections is the treatment</description>
        <label>BDVTRINJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTRODV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Orthotic or assistive devices</description>
        <label>BDVTRODV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTROMD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Oral Medication is treatment</description>
        <label>BDVTROMD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTROSP__c</fullName>
        <description>Other Specified</description>
        <label>BDVTROSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDVTROTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other Please specify</description>
        <label>BDVTROTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTRPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prescribed diet is the treatment</description>
        <label>BDVTRPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTRPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Physical limitations is the treatment</description>
        <label>BDVTRPL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTRUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unknown</description>
        <label>BDVTRUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDVTR__c</fullName>
        <description>Developmental Course of Treatment</description>
        <label>BDVTR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BEDUCATE__c</fullName>
        <description>What is the hightest level of eduction you have finished whether or not you received a degree</description>
        <label>BEDUCATE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFAMRES__c</fullName>
        <description>Rating of family&apos;s resources</description>
        <label>BFAMRES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGRAMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Grandparent is service member</description>
        <label>BGRAMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGUARDSP__c</fullName>
        <description>Guardian is Other, Specified</description>
        <label>BGUARDSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGUARD__c</fullName>
        <description>Currently legal guardian for this child</description>
        <label>BGUARD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHEIGHFT__c</fullName>
        <description>Childs height feet</description>
        <label>BHEIGHFT</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BHEIGHIN__c</fullName>
        <description>Childs height inches</description>
        <label>BHEIGHIN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BHISALL__c</fullName>
        <description>Allergies is health condition</description>
        <label>BHISALL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISASTH__c</fullName>
        <description>Asthma is the physical condition</description>
        <label>BHISASTH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISCAN__c</fullName>
        <description>Cancer is the health status</description>
        <label>BHISCAN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISDEN__c</fullName>
        <description>Dental Conditions is the health status</description>
        <label>BHISDEN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISDIAB__c</fullName>
        <description>Diabetes is health condition</description>
        <label>BHISDIAB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISEI__c</fullName>
        <description>Recurrent ear infections is health condition</description>
        <label>BHISEI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISENCO__c</fullName>
        <description>Encopresis is the health status</description>
        <label>BHISENCO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BHISENUR__c</fullName>
        <description>Enuresis is the health status</description>
        <label>BHISENUR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>